# below-console-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  TUTORIAL.md  build.bat  build.sh  generate_report.py  keybindings.cfg  main.cpp  test
assets/: title.txt
assets/effects/: effects.json  item_effects.json
assets/entities/: entity_index.json  player.json
assets/entities/creatures/: deer.json  rabbit.json
assets/entities/enemies/: bandit.json  bear.json  demon.json  dragon.json  four_armed_ogre.json  giant_spider.json  goblin.json  hydra.json  orc_warrior.json  skeleton.json  wolf.json  zombie.json
assets/entities/items/: ale.json  antidote.json  arrows.json  battle_axe.json  body_swap_potion.json  bolts.json  bottled_curse.json  bread.json  chain_mail.json  chest_key.json  cloning_potion.json  crossbow.json  crossbow_bolts.json  curved_blade.json  elixir_of_regeneration.json  elixir_of_vigor.json  gold_coin.json  great_sword.json  greater_health_potion.json  health_potion.json  hunting_bow.json  iron_armor.json  iron_dagger.json  iron_helmet.json  iron_key.json  iron_sword.json  leather_armor.json  leather_boots.json  leather_cap.json  long_sword.json  lucky_charm.json  meat_stew.json  mutagen.json  poison_vial.json  potion_of_iron_skin.json  potion_of_night_vision.json  potion_of_strength.json  potion_of_swiftness.json  rope.json  ruby.json  (+14 more)
assets/entities/misc/: corpse.json
assets/entities/npcs/: guard.json  innkeeper.json  merchant.json  mysterious_stranger.json  tutorial_guide.json  villager.json  wandering_trader.json  witch.json
assets/entities/structures/: barrel.json  campfire.json  iron_door.json  locked_chest.json  signpost.json  stone_wall.json  torch.json  treasure_chest.json  wooden_door.json  wooden_wall.json
assets/structures/: abandoned_castle.json  bakery.json  bandit_hideout.json  blacksmith.json  bridge.json  camp.json  cave_entrance.json  church.json  crossroads.json  desert_temple.json  dragon_lair.json  dungeon_entrance.json  fairy_ring.json  farm.json  farm_plot.json  fishing_village.json  fortress.json  fountain.json  graveyard.json  guardhouse.json  hot_spring.json  house_large.json  house_small.json  inn.json  market_stall.json  mine_entrance.json  mountain_pass.json  oasis.json  outpost.json  ruins.json  shop.json  stable.json  starting_hut.json  stone_circle.json  tavern.json  temple.json  tower.json  village.json  wayshrine.json  well.json  (+1 more)
assets/worldgen/: biomes.json  world_parameters.json
demos/: vk_demo.cpp  vk_game.cpp  vk_test.cpp  vk_ui_demo.cpp  zlevel_game.cpp
engine/: CMakeLists.txt
engine/ecs/: component.hpp  component_manager.hpp  component_serialization.hpp  entity.hpp  entity_transfer.hpp  spatial_hash.hpp  types.hpp
engine/ecs/components/: component_base.hpp  corpse_component.hpp  dialogue_component.hpp  faction_component.hpp  interactable_component.hpp  inventory_component.hpp  item_component.hpp  movement_component.hpp  npc_component.hpp  position_component.hpp  properties_component.hpp  render_component.hpp  shop_component.hpp  stats_component.hpp  status_effects_component.hpp
engine/ecs/serialization/: enum_converters.hpp
engine/input/: input.hpp
engine/loaders/: effect_type_registry.hpp  entity_loader.hpp  item_effect_type_registry.hpp  structure_loader.hpp  worldgen_loader.hpp
engine/render/: console.hpp  renderer.hpp  ui.hpp
engine/render/vulkan/: stb_impl.cpp.in  vk_buffer.cpp  vk_buffer.hpp  vk_camera.hpp  vk_context.cpp  vk_context.hpp  vk_input.cpp  vk_input.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_sprite_batch.cpp  vk_sprite_batch.hpp  vk_text.cpp  vk_text.hpp  vk_texture.cpp  vk_texture.hpp  vk_types.hpp  vk_ui.cpp  vk_ui.hpp  vk_window.cpp  vk_window.hpp  vma_impl.cpp.in
engine/render/vulkan/shaders/: compile_shaders.bat  compile_shaders.sh  sprite.frag  sprite.vert
engine/scene/: base_gameplay_scene.hpp  common_scenes.hpp  menu_window.hpp  new_game_window.hpp  save_load_window.hpp  scene.hpp  scene_ids.hpp  scene_manager.hpp  settings_menu.hpp  vk_scene.hpp  vk_scene_manager.hpp
engine/scene/gameplay/: gameplay_combat.inl  gameplay_help.inl  gameplay_interaction.inl  gameplay_menu.inl  gameplay_persistence.inl  gameplay_ui.inl
engine/src/: ai_system.cpp  combat_system.cpp  component.cpp  console.cpp  interaction_system.cpp  inventory_system.cpp  ui.cpp
engine/systems/: ai_system.hpp  combat_system.hpp  dialogue_system.hpp  interaction_system.hpp  interaction_system.inl  inventory_system.hpp  status_effect_system.hpp  utility_ai.hpp
engine/util/: json.hpp  rng.hpp  save_system.hpp
engine/world/: biome.hpp  biome_features.hpp  chunk.hpp  chunk_coord.hpp  chunk_generator.hpp  dungeon_state.hpp  game_state.hpp  jigsaw_generator.hpp  perlin_noise.hpp  procedural_generator.hpp  tile_drawing_utils.hpp  tileset.hpp  village_config.hpp  world.hpp
game/entities/: effect_registry_init.hpp  entity_factory.hpp
game/scenes/: dungeon_scene.hpp  exploration_scene.hpp  structure_debug_scene.hpp
hello_world/: CMakeLists.txt  README.md  hello_world.cpp
iron_below/: CMakeLists.txt  README.md  build.bat  iron_below.cpp
underlight/: CMakeLists.txt  underlight.cpp
